style fix for line spacing in stats

--- a/game/02-CSS/base.css
+++ b/game/02-CSS/base.css
@@ -1017,6 +1017,7 @@ span.number, span.suit {
 
 #stats {
 	height: 20px;
+	line-height: 20px;
 	width: 256px;
 	overflow: hidden;
 	border-top: #fff 2px solid;
@@ -1034,7 +1035,7 @@ span.number, span.suit {
 }
 
 .statsExtended {
-	height: 45px !important;
+	height: 40px !important;
 }
 
 .icon_ui {
